# data-onboarding-and-reporting

./: .gitignore  LICENSE  README.md
data-onboarding-system/: .env.example  .gitignore  CHANGELOG.md  HANDOVER_LINK.md  Makefile  README.md  config.example.yaml  config.test.yaml  config_llm_demo.yaml  conftest.py  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
data-onboarding-system/app/: __init__.py  cli.py  config.py  dashboard_server.py
data-onboarding-system/app/analysis/: column_classifier.py  gdpr_assessment.py  interesting_columns.py  missing_strategy.py  pii_scan.py  profiling.py  quality_checks.py  readiness_score.py  relationships.py  structural_overview.py
data-onboarding-system/app/connectors/: base.py  (+5 more)
data-onboarding-system/docker/: Dockerfile  Dockerfile.test
data-onboarding-system/docs/: QUICK_START.md  TESTING.md
data-onboarding-system/tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_connectors_mysql_s3.py  test_csv_connector.py  test_dataset_validation.py  test_e2e_cli.py  test_e2e_golden.py  test_error_paths.py  test_html_report.py  test_integration.py  test_iot_template.py  test_kpi_contract.py  test_kpi_detector.py  test_llm_client.py  test_llm_integration.py  test_llm_prompts.py  test_llm_schemas.py  test_llm_service.py  test_new_analysis.py  test_orchestration.py  test_pdf_export.py  test_pipeline_deliverables.py  test_quality_scoring.py  test_relationships.py  test_report_and_export.py  test_sampling.py  test_security.py  test_security_pipeline.py  test_storage.py  test_stress.py
(+59 files in other folders)
